fix: scrollbars styling

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@ $backgroundPrimary: var(--background-surface-high, #242429);
 $backgroundSecondary: var(--background-base-lower, #1a1a1e);
 $textColor: var(--header-secondary, #efeff0);
 
-$scrollbarColor: rgb(105, 96, 128);
+$borderRadius: var(--radius-sm, 8px);
 
 $fontDisplay: var(--font-display, "gg sans", "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif);
 $fontCode: var(--font-code, "gg mono", "Source Code Pro", Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace);
@@ -15,6 +15,8 @@ div#magane {
 	height: 44px;
 	position: absolute;
 	z-index: 1001;
+	scrollbar-width: auto !important;
+	scrollbar-color: auto !important;
 
 	button, input, select, label, span, p, a, li, ul, div, textarea {
 		font-family: $fontDisplay;
@@ -606,39 +608,35 @@ div#magane {
 
 	.has-scroll-x {
 		overflow: auto hidden;
-		scrollbar-gutter: stable;
 	}
 
 	.has-scroll-y {
 		overflow: hidden auto;
-		scrollbar-gutter: stable;
 	}
 
 	::-webkit-scrollbar {
-		&-track {
-			margin: 0;
-			background: transparent;
-			border-radius: 5px;
+		height: 8px !important;
+		width: 8px !important;
 
-			&-piece {
-				border: 0 solid transparent;
-				background: transparent;
-				margin: 0;
-			}
+		&-corner {
+			background-color: transparent;
+		}
+
+		&-track {
+			background-color: var(--scrollbar-auto-track, transparent);
+			margin: $borderRadius 0 !important;
 		}
 
 		&-thumb {
-			background: rgba($scrollbarColor, 0.5);
-			border: 0 solid transparent;
-			border-radius: 5px;
+			background-color: var(--scrollbar-auto-thumb, #666771);
+			min-height: 40px;
+		}
 
-			&:hover {
-				background: rgba($scrollbarColor, 0.75);
-			}
-
-			&:active {
-				background: rgba($scrollbarColor, 1);
-			}
+		&-track,
+		&-thumb {
+			background-clip: padding-box;
+			border: 0 solid transparent !important;
+			border-radius: $borderRadius;
 		}
 	}
 }
